# cppgit2

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-and-test.yml
include/cppgit2/: annotated_commit.hpp  apply.hpp  blame.hpp  blob.hpp  checkout.hpp  cherrypick.hpp  clone.hpp  commit.hpp  config.hpp  credential.hpp  data_buffer.hpp  diff.hpp  fetch.hpp  git_exception.hpp  index.hpp  indexer.hpp  libgit2_api.hpp  merge.hpp  note.hpp  object.hpp  odb.hpp  oid.hpp  pack_builder.hpp  patch.hpp  pathspec.hpp  proxy.hpp  push.hpp  rebase.hpp  refdb.hpp  reference.hpp  reflog.hpp  refspec.hpp  remote.hpp  repository.hpp  revert.hpp  revspec.hpp  revwalk.hpp  signature.hpp  stash.hpp  status.hpp  (+8 more)
samples/: walk_tree.cpp
src/: annotated_commit.cpp  blame.cpp  blob.cpp  commit.cpp  config.cpp  credential.cpp  data_buffer.cpp  diff.cpp  index.cpp  indexer.cpp  merge.cpp  note.cpp  object.cpp  odb.cpp  oid.cpp  pack_builder.cpp  patch.cpp  pathspec.cpp  rebase.cpp  reference.cpp  reflog.cpp  refspec.cpp  remote.cpp  repository.cpp  revwalk.cpp  signature.cpp  strarray.cpp  submodule.cpp  tag.cpp  transaction.cpp  tree.cpp  tree_builder.cpp  worktree.cpp
test/: doctest.hpp
